added review feature

--- a/Learnd_frontend/src/index.css
+++ b/Learnd_frontend/src/index.css
@@ -31,3 +31,8 @@ button{
 .deckLabel {
   background-color: transparent
 }
+
+.test-modal {
+  background: radial-gradient(circle, #AFA4A2 0%, #988E8D 33%, #7B7473 68%, #716867 93%);
+}
+
